--- a/Level-two/styles.css
+++ b/Level-two/styles.css
@@ -137,6 +137,7 @@ textarea {
 .container2 {
     width: 100%;
     height: 100vh;
+    background-color: plum;
 }
 
 .appreciation {
@@ -173,10 +174,10 @@ textarea {
 .thanks {
     margin-top: 0;
     font-family: 'Bungee Shade', cursive;
-    font-size: 2.5rem;
+    font-size: 3rem;
     letter-spacing: 1px;    
-    color: blueviolet;
-    text-shadow: 5px 2px 2px plum;
+    color: #FFF;
+    text-shadow: 5px 2px 2px blueviolet;
 }
 
 @media screen and (max-width: 768px) {
@@ -243,7 +244,7 @@ textarea {
     }
 }
 
-@media screen and (max-width: 280px) {
+@media screen and (max-width: 360px) {
     .thanks {
         font-size: 1.5rem;
     }
