--- a/Level-two/styles.css
+++ b/Level-two/styles.css
@@ -34,15 +34,19 @@ button {
     display: grid;
     grid-template-columns: repeat(2, 50%);
     column-gap: 20px;
-    padding: 20px 30px;
+    padding: 20px 30px 50px 30px;
 }
 
 .form-input input {
     display: block;
     width: 100%;
-    padding: 10px 15px;
+    padding: 7px;
     border: 1px solid #cccccc;
     border-radius: 5px;
+}
+
+.form-input label {
+    font-size: 0.8rem;
 }
 
 .text-input {
@@ -65,6 +69,7 @@ button {
 
 .form-label span {
     font-style: italic;
+    font-size: 0.8rem;
 }
 
 textarea {
@@ -80,7 +85,11 @@ textarea {
 }
 
 .radio-input input {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.radio-input label {
+    font-size: 0.9rem;
 }
 
 .radio-input small {
@@ -100,10 +109,11 @@ textarea {
     background-image: url('assets/342027badddd90862de5b7a863701883.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 .form-input small, .radio-input .small {
+    font-size: 0.7rem;
     color: #FF0000;
     position: absolute;
     visibility: hidden;
@@ -219,6 +229,10 @@ textarea {
         width: 100%;
         height: 30vh;
         background-size: cover;
+    }
+
+    .left-top p {
+        font-size: 0.9rem;
     }
 
     /* .appreciation {
