--- a/Level-six/styles.css
+++ b/Level-six/styles.css
@@ -151,7 +151,7 @@ input {
     background-color: hsl(231, 69%, 60%);
     color: #FFF;
     text-align: center;
-    padding: 40px 0;
+    padding: 40px 20px;
 }
 
 .bottom-footer {
@@ -164,15 +164,30 @@ input {
 
 .footer-form {
     display: flex;
-    align-items: center;
     margin-top: 20px;
+}
+
+.footer-form label {
+    width: 80%;
 }
 
 .footer-form input {
     padding: 10px 25px;
-    border-radius: 5px;
-    margin-right: 5px;
-    width: 80%;
+    border-radius: 5px 5px 0 0;
+    width: 90%;
+}
+
+.footer-btn {
+    width: 30%;
+    padding: 10px 5px;
+}
+
+.error-block.show {
+    display: inline-block;
+    padding: 10px 24px;
+    font-size: 0.7rem;
+    border-radius: 0 0 5px 5px;
+    background-color: hsl(0, 94%, 66%);
 }
 
 .bottom-footer .nav-link a {
@@ -190,6 +205,45 @@ input {
 
 .socials a {
     padding-right: 10px;
+}
+
+.inactive {
+    display: none;
+}
+
+.nav-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #aaa;
+}
+
+.nav-center {
+    text-align: center;
+}
+
+.nav-center .nav-link {
+    padding: 30px 0;
+    border-bottom: 1px solid #aaa;
+}
+
+.nav-center .nav-link a {
+    color: #FFF;
+    font-size: 1.3rem;
+}
+
+.nav-center .login-active {
+    padding: 20px 0;
+    border-bottom: none;
+    border: 2px solid #FFF;
+    margin-top: 30px;
+}
+
+.inactive .socials {
+    position: absolute;
+    bottom: 30px;
+    right: 50%;
 }
 
 @media screen and (max-width: 1130px) {
@@ -314,4 +368,45 @@ input {
     .bottom-footer .main-nav {
         flex-direction: column;
     }
+
+    .active {
+        display: block;
+        width: 100%;
+        height: 100vh;
+        padding: 40px 60px;
+        position: absolute;
+        top: 0;
+        z-index: 20;
+        background-color: hsl(229, 31%, 21%);
+        color: #FFF;
+    }
+
+    .fit {
+        height: 100vh;
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .btn {
+        font-size: 0.65rem;
+    }
+
+    .footer-form {
+        display: block;
+    }
+
+    .footer-form label, .footer-form button {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .footer-form input {
+        width: 100%;
+    }
+
+    .error-block.show {
+        width: 100%;
+    }
+
 }
